[gd_scene load_steps=11 format=3 uid="uid://dl7etmw31qnof"]

[ext_resource type="Script" path="res://main.gd" id="1_brldc"]
[ext_resource type="Script" path="res://scripts/space_background.gd" id="2_doega"]
[ext_resource type="Script" path="res://managers/grid.gd" id="2_lvljp"]
[ext_resource type="PackedScene" uid="uid://bqf1ewcvnbx7q" path="res://scenes/player.tscn" id="3_4h0bx"]
[ext_resource type="Script" path="res://scripts/spawners/enemy_spawner.gd" id="4_bfxvw"]
[ext_resource type="Script" path="res://scripts/spawners/planet_spawner.gd" id="5_oha7o"]
[ext_resource type="Script" path="res://scripts/spawners/asteroid_spawner.gd" id="6_lenuj"]
[ext_resource type="Script" path="res://combat_manager.gd" id="7_suh4m"]
[ext_resource type="Script" path="res://managers/resource_manager.gd" id="8_q6wiy"]

[sub_resource type="LabelSettings" id="LabelSettings_tjo1m"]
font_size = 24
font_color = Color(1, 0.2, 0.2, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.5)
shadow_offset = Vector2(2, 2)

[node name="Main" type="Node2D"]
script = ExtResource("1_brldc")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("2_doega")

[node name="Grid" type="Node2D" parent="."]
script = ExtResource("2_lvljp")
cell_size = Vector2(1024, 1024)
grid_size = Vector2(10, 10)
grid_color = Color(0.2, 0.2, 0.2, 0)
boundary_color = Color(1, 0, 0, 0)
seed_value = 52

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SeedLabel" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0

[node name="MessageLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
text = "Warning Message"
label_settings = SubResource("LabelSettings_tjo1m")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player" parent="." instance=ExtResource("3_4h0bx")]

[node name="EnemySpawner" type="Node" parent="."]
script = ExtResource("4_bfxvw")

[node name="PlanetSpawner" type="Node" parent="."]
script = ExtResource("5_oha7o")
planet_percentage = null
minimum_planets = null
moon_chance = null
max_moons = null
moon_orbit_factor = null
cell_margin = null
min_moon_distance_factor = null
max_moon_distance_factor = null
max_orbit_deviation = null

[node name="AsteroidSpawner" type="Node" parent="."]
script = ExtResource("6_lenuj")
asteroid_percentage = 30
minimum_asteroids = null
min_asteroids_per_cell = null
max_asteroids_per_cell = null
asteroid_scale_min = null
asteroid_scale_max = null
cell_margin = null
cluster_percentage = null
large_percentage = null
medium_percentage = null

[node name="CombatManager" type="Node" parent="."]
script = ExtResource("7_suh4m")

[node name="ResourceManager" type="Node" parent="."]
script = ExtResource("8_q6wiy")
